<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="SigninFromOtherAccount">Invalid session  </string>
    <string name="upg_general_app_name">VPOS SDK</string>
    <string name="upg">Unified Payment Gateway</string>
    <string name="upg_general_Version">" Ver "</string>
    <string name="upg_general_Close"> Close </string>
    <string name="upg_general_numbers"> Numbers </string>
    <string name="MerchantID">Merchant ID:  </string>
    <string name="MerchantIDWithOutDot">Merchant ID</string>
    <string name="upg_general_upg_merchant_id">UPG Merchant ID</string>
    <string name="upg_general_upg_terminal_id">Terminal ID</string>
    <string name="upg_paylink_history_TotalDueAmount_label">Due Amount</string>
    <string name="upg_paylink_history_TotalResult_label"> Total Results</string>
    <string name="upg_paylink_history_TotalDueCount_label">Due Count</string>
    <string name="upg_paylink_history_TotalPaidAmount_label">Paid Amount</string>
    <string name="upg_paylink_history_TotalPaidCount_label">Paid Count</string>
    <string name="upg_paylink_history_TotalCount_label">All Count</string>
    <string name="Must_be_at_least">Must be at least</string>
    <string name="upg_dialog_Confirmation_title_label"> Confirmation  </string>
    <string name="upg_dialog_attachment_title_label"> Choose attachments  </string>
    <string name="upg_dialog_Confirmation_message_label">Are you sure you want to exit from application ? </string>
    <string name="upg_general_cancel">Cancel </string>
    <string name="upg_dialog_Transactionfilter_title">Transaction Filter </string>
    <string name="upg_dialog_Transactionfilter_TahweelTransactionID_label">Network Ref. #</string>
    <string name="ConnectingtoUPG">Connecting to UPG.</string>
    <string-array name="qrcode_detectors">
        <item>STANDARD</item>
        <item>FAST</item>
    </string-array>
    <string-array name="pay_link_type">
        <item>One-use link</item>
        <item>Multiple-use link</item>
    </string-array>
    <string name="upg_dialog_Transactionfilter_Dateto_hint">Date to</string>
    <string name="upg_dialog_Transactionfilter_Datefrom_hint">Date from</string>
    <string name="upg_general_Update">Update</string>
    <string name="pleaseselectstartdate">Select start date</string>
    <string name="pleaseselectenddate">Select end date</string>
    <string name="validmobileNumber">Enter valid mobile number</string>
    <string name="validMeezaDigitalIdOrMobile">Enter valid MeezaDigital ID / mobile number</string>
    <string name="Invalidsearchdata">Invalid Search Data</string>
    <string name="DateFrommustbehigherthanDato">Date To must be higher than Date From</string>
    <string name="upg_paylink_send_PayLink_btn">Send PayLink</string>
    <string name="genrateQuickCode">Generate Quick Code</string>
    <string name="quickCode">Quick Code</string>
    <string name="upg_dialog_AtmQuickCode_title_label">ATM Quick Code</string>
    <string name="account_service">Account Service</string>
    <string name="upg_dialog_use_customer_app_label">Please use the customer  application to scan the provided QR code</string>
    <string name="upg_change_password_change_label">Change Password</string>
    <string name="DeniedMessage">If you reject permission,you can not use this service\n\n" +
                        "Turn on permissions at [Setting] > [Permission]</string>
    <string name="upg_dialog_AtmQuickCode_enter_title">
      Enter the quick code on the ATM



    </string>
    <string name="upg_paylink_details_SystemReferenceNumber_label"> System Ref #</string>
    <string name="upg_paylink_details_PaymentMethod_label"> Payment Method</string>
    <string name="upg_paylink_details_NetworkReferenceNumber_label"> Network Ref. #</string>
    <string name="fontappr">font/robotecrec.ttf</string>
    <string name="fontappb">font/robotecbold.ttf</string>
    <string name="newUpdate">A new update </string>
    <string name="newUpdateDes">A new update has been found, you must update your application</string>
    <string name="update">Update </string>
    <string name="upg_general_to">To </string>
    <string name="upg_login_Remember_Me_label">Remember Me</string>
    <string name="upg_general_OrderID">Order ID:</string>
    <string name="upg_general_Status">Status:</string>
    <string name="sharerecipt">Share PayLink</string>
    <string name="upg_dialog_shareLink">Share Link</string>
    <string name="clear">Clear</string>
    <string name="sharePayLink">
       %1$s is requesting payment of %2$s %3$s, merchant reference   %4$s
To make payment,  click this link:
\n
         %5$s
\n
Link expires on  %6$s
\nPowered by PaySky Payment Solutions.
    </string>
    <string name="sharePayLinkWithoutRef">
       %1$s is requesting payment of %2$s %3$s,
To make payment,  click this link:
\n
         %4$s
\n
Link expires on  %5$s
\nPowered by PaySky Payment Solutions.
    </string>
    <string name="adcb_powered_by">Powered by</string>
    <string name="adcb_powered_by_support">Powered by:</string>
    <string name="upg_login_login_label">Login</string>
    <string name="upg_login_username_hint">Mobile Number/Merchant ID</string>
    <string name="upg_login_password_hint">PIN</string>
    <string name="upg_change_password_old_password_hint">Old PIN</string>
    <string name="upg_change_password_new_password_hint">New PIN</string>
    <string name="upg_change_password_reneter_new_password_hint">Renter New PIN</string>
    <string name="upg_login_keyboard_label">Login</string>
    <string name="upg_general_QR">QR</string>
    <string name="QRQenration">QR Generation</string>
    <string name="upg_general_DashBoard">Dashboard</string>
    <string name="upg_dashboard_TotalSales_label">Total Sales</string>
    <string name="upg_dashboard_Total_Tips_label">Total Tips/Conv. Fees</string>
    <string name="upg_dashboard_conv_fees_label">Conv. Fees</string>
    <string name="upg_general_Details">Details</string>
    <string name="upg_general_Search">Search</string>
    <string name="upg_general_All">All</string>
    <string name="AllTerminal">Terminal - All </string>
    <string name="upg_general_card">Card: </string>
    <string name="upg_general_Terminal">"Terminal: "</string>
    <string name="upg_general_TerminalWithoutDot">"Terminal"</string>
    <string name="upg_login_forgot_password_label">Forgot Password?</string>
    <string name="forgetpassmessage">Done sending support ticket to Paysky
        help disk  call them to authenticate your request.\n
        Your ticket number %s </string>
    <string name="upg_general_mVisa">"Visa: "</string>
    <string name="upg_general_Tahweel">"Meeza Digital: "</string>
    <string name="upg_general_Cash">"Cash: "</string>
    <string name="upg_general_dispute">"Dispute: "</string>
    <string name="upg_general_scan">Scan</string>
    <string name="upg_general_Help">Help</string>
    <string name="scan_note">Scan Merchant QR code to pay</string>
    <string name="upg_Notifications_title">Notifications</string>
    <string name="UPGTID">UPG TID: </string>
    <string name="upg_sale_by_QR_MerchantName_label">Merchant Name</string>
    <string name="upg_paylink_history_Merchant_Reference_label">Merchant Ref# </string>
    <string name="upg_sale_by_QR_title_label">Scan QR code</string>
    <string name="yallavpos_sale_by_QR_title_label">Please Scan QR Code</string>
    <string name="upg_sale_by_QR_paymen_request_btn">Payment Request</string>
    <string name="upg_general_request">Request</string>
    <string name="upg_sale_by_QR_DynamicQR_btn">Dynamic QR</string>
    <string name="upg_sale_by_QR_paymen_request_label">Can\'t scan QR code?\nSend payment request to customer\'s mobile number.</string>
    <string name="upg_general_Channel">"Channel: "</string>
    <string name="upg_general_waiting_comfirm">"Waiting  Confirmation"</string>
    <string name="upg_general_confirmation">"Confirmation"</string>
    <string-array name="notitype">
        <item>Email</item>
        <item>Mobile</item>
    </string-array>
    <string-array name="upg_paylink_filter_statustypes">
        <item>Status - ِAll</item>
        <item>UnPaid</item>
        <item>Paid</item>
        <item>Cancelled</item>
        <item>Partially Paid</item>
    </string-array>
    <string name="upg_general_fees">Fees</string>
    <string name="upg_reciept_Total_label">Total </string>
    <string name="upg_general_Amountdot">Amount : </string>
    <string name="upg_general_Amount">Amount</string>
    <string name="upg_receipt_Reject_Reason_label">Rejection Reason</string>
    <string name="AmountEGP">"Amount: "</string>
    <string name="ToRefund">(Refund) To:</string>
    <string name="FromSale">(Sale) From:</string>
    <string name="Notification">" Notification "</string>
    <string name="DateLessToday"> Date must be greater than today</string>
    <string name="TrxID">Trx ID </string>
    <string name="SalesFees">"Total: "</string>
    <string name="TrxnType">Trxn. Type</string>
    <string name="upg_paylink_order_Type_label">Order Type</string>
    <string name="Time">Time</string>
    <string name="Ref">Ref #</string>
    <string name="upg_general_from">From</string>
    <string name="upg_general_login">Login</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_email">This email is not valid</string>
    <string name="upg_general_language">عربى</string>
    <string name="error_six">PIN must be six digit</string>
    <string name="password_not_much">PIN not match</string>
    <string name="password_unique">PIN must be unique don\'t duplicate any number </string>
    <string name="password_not_accppt">Sequential digits are not allowed</string>
    <string name="invalid_pin">invalid PIN</string>
    <string name="invalid_lenght">Invalid length</string>
    <string name="Therefundamount">The amount must be less than or equal transaction amount</string>
    <string name="upg_general_powered_by">Powered by Paysky.io</string>
    <string name="upg_general_provide_by">Provided by EBC</string>
    <string name="upg_general_Refund">Refund</string>
    <string name="Void">Void</string>
    <string name="upg_general_Send">Send</string>
    <string name="upg_Moresettings_title">More settings</string>
    <string name="upg_general_Tips">Tips</string>
    <string name="upg_paylink_history_payOnDelivery_label">Pay on Delivery</string>
    <string name="Billnumber">Bill number</string>
    <string name="Storelabel">Store label</string>
    <string name="upg_general_Loyaltynumber">Loyalty number</string>
    <string name="upg_new_merchant_label_email">Email Address</string>
    <string name="upg_general_Customerlabel">Customer  label</string>
    <string name="upg_MoreSettings_transaction_purpose_label">Purpose of transaction</string>
    <string name="upg_dialog_meeza_digital_id_title">Enter MeezaDigital ID / Mobile Number</string>
    <string name="upg_dialog_meeza_digital_title">MeezaDigital ID / Mobile Number</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eghit">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="zerozero">00</string>
    <string name="upg_general_password">Password</string>
    <string name="upg_general_completed">Completed!</string>
    <string name="upg_general_password_reset">Password Reset</string>
    <string name="upg_dialog_completed_link_sent"> Link was sent successfully</string>
    <string name="upg_general_please_show_qr_link">Please show the QR-Link to customer:</string>
</resources>