<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_3sdp"


        android:background="@color/seprator_color" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="@dimen/_3sdp"
            android:layout_height="match_parent"


            android:background="@color/seprator_color" />

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/txt_next"
            android:layout_below="@+id/liner_header"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:textStyle="bold"

                    android:id="@+id/text_1"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"

                    android:text="@string/one"

                    android:textSize="@dimen/_16ssp" />

                <View
                    android:layout_width="@dimen/_3sdp"
                    android:layout_height="match_parent"
                    android:background="@color/seprator_color" />

                <TextView
                    android:textStyle="bold"

                    android:id="@+id/text_2"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10sp"
                    android:text="@string/two"
                    android:textSize="@dimen/_16ssp" />

                <View
                    android:layout_width="@dimen/_3sdp"
                    android:layout_height="match_parent"
                    android:background="@color/seprator_color" />

                <TextView
                    android:textStyle="bold"
                    android:id="@+id/text_3"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10sp"
                    android:text="@string/three"
                    android:textSize="@dimen/_16ssp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_3sdp"

                android:background="@color/seprator_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:textStyle="bold"

                    android:id="@+id/text_4"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10sp"
                    android:text="@string/four"
                    android:textSize="@dimen/_16ssp" />

                <View
                    android:layout_width="@dimen/_3sdp"
                    android:layout_height="match_parent"
                    android:background="@color/seprator_color" />

                <TextView
                    android:textStyle="bold"

                    android:id="@+id/text_5"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10sp"
                    android:text="@string/five"
                    android:textSize="@dimen/_16ssp" />

                <View
                    android:layout_width="@dimen/_3sdp"
                    android:layout_height="match_parent"
                    android:background="@color/seprator_color" />

                <TextView
                    android:textStyle="bold"

                    android:id="@+id/text_6"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10sp"
                    android:text="@string/six"
                    android:textSize="@dimen/_16ssp" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_3sdp"

                android:background="@color/seprator_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:textStyle="bold"

                    android:id="@+id/text_7"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10sp"
                    android:text="@string/seven"
                    android:textSize="@dimen/_16ssp" />

                <View
                    android:layout_width="@dimen/_3sdp"
                    android:layout_height="match_parent"
                    android:background="@color/seprator_color" />

                <TextView
                    android:textStyle="bold"

                    android:id="@+id/text_8"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10sp"
                    android:text="@string/eghit"
                    android:textSize="@dimen/_16ssp" />

                <View
                    android:layout_width="@dimen/_3sdp"
                    android:layout_height="match_parent"
                    android:background="@color/seprator_color" />

                <TextView
                    android:textStyle="bold"

                    android:id="@+id/text_9"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10sp"
                    android:text="@string/nine"
                    android:textSize="@dimen/_16ssp" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_3sdp"

                android:background="@color/seprator_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/text_00"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/zerozero"


                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="@dimen/_3sdp"
                    android:layout_height="match_parent"
                    android:background="@color/seprator_color" />

                <TextView
                    android:id="@+id/text_0"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10sp"
                    android:text="@string/zero"
                    android:textStyle="bold"
                    android:textSize="@dimen/_16ssp" />

                <View
                    android:layout_width="@dimen/_3sdp"
                    android:layout_height="match_parent"
                    android:background="@color/seprator_color" />

                <LinearLayout
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10sp"

                    android:textSize="@dimen/_16ssp">


                    <ImageView
                        android:tint="@color/tintColor"
                        android:id="@+id/RemoveLast"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="center"
                        android:src="@drawable/remove_icon" />


                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="@dimen/_3sdp"
            android:layout_height="match_parent"


            android:background="@color/seprator_color" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_3sdp"


        android:background="@color/seprator_color" />

</LinearLayout>
