<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/dialog_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:gravity="center"
        android:text="@string/upg_dialog_meeza_digital_id_title"
        android:textColor="@color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/blue_bg_with_redius">

            <ImageView
                android:id="@+id/iv_meeza_mobile_number"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_margin="@dimen/_5sdp"
                android:src="@drawable/username" />

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:maxLength="11"
                android:hint="@string/upg_dialog_meeza_digital_title"
                android:inputType="number"
                style="@style/EditStyle" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            tools:visibility="visible"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/blue_bg_with_redius"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_margin="@dimen/_3sdp"
                android:src="@drawable/password" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/upg_general_password"
                android:imeActionLabel="@string/upg_general_login"
                android:imeOptions="actionDone"
                android:inputType="numberPassword"
                android:maxLines="1"
                android:layout_margin="@dimen/_5sdp"
                android:textAlignment="viewStart"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/hintColor" />
        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp">


        <LinearLayout
            android:id="@+id/login"

            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginEnd="@dimen/_3sdp"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_weight="1"
            android:background="@drawable/green_with_redius"
            android:gravity="center"
            android:padding="@dimen/_7sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_3sdp"
                android:layout_marginStart="@dimen/_3sdp"
                android:src="@drawable/correctwhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upg_general_Send"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginEnd="@dimen/_3sdp"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_weight="1"
            android:background="@drawable/white_blue_radius_background"
            android:gravity="center"
            android:padding="@dimen/_7sdp">

            <ImageView
                android:tint="@color/lightBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_3sdp"
                android:layout_marginStart="@dimen/_3sdp"
                android:src="@drawable/wrong" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upg_general_Close"
                android:textColor="@color/lightBlue" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>