<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/dialog_background"
    android:orientation="vertical">

    <TextView
        android:textAppearance="@style/TextViewCustomFont"
        android:id="@+id/headertitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:gravity="center"
        android:text="@string/upg_general_password_reset" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@color/gray" />

    <TextView
        android:id="@+id/describtion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/_15sdp"
        android:paddingStart="@dimen/d15"
        android:paddingEnd="@dimen/_15sdp"
        tools:text="@string/upg_dialog_use_customer_app_label"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp">


        <LinearLayout
            android:id="@+id/cancel_action"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_margin="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_3sdp"
            android:layout_weight="1"
            android:background="@drawable/green_with_redius"
            android:gravity="center"
            android:padding="@dimen/_7sdp"
            android:textColor="@color/white">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/upg_general_Close"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>